[package]
name = "criterion-decimal-throughput"
version = "1.0.1"
authors = ["Mateusz Gienieczko <mat@gienieczko.com>"]
edition = "2021"
description = "Criterion.rs measurement for decimal throughput (MB/s, GB/s, etc.)"
readme = "README.md"
license = "MIT"
keywords = ["criterion", "benchmark", "measurement", "throughput", "criterion-rs"]
categories = ["profiling"]
repository = "https://github.com/V0ldek/criterion-decimal-throughput"

[dependencies] 
criterion = "0.3.5"

[dev-dependencies]
proptest = "1.0.0"
