[package]
name = "criterion-decimal-throughput"
version = "1.0.2"
authors = ["Mateusz Gienieczko <mat@gienieczko.com>"]
edition = "2021"
description = "Criterion.rs measurement for decimal throughput (MB/s, GB/s, etc.)"
readme = "README.md"
license = "MIT"
keywords = ["criterion", "benchmark", "measurement", "throughput", "criterion-rs"]
categories = ["development-tools::profiling"]
repository = "https://github.com/V0ldek/criterion-decimal-throughput"

[dependencies] 
criterion = "0.3.6"

[dev-dependencies]
proptest = "1.0.0"
